best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-25 -->
+<!-- 2022-10-26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>任务和作业</title>
@@ -22,34 +22,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#active">1. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-25 Tue]</span></span></a></li>
-<li><a href="#orgfbbfe55">2. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-19 Wed]</span></span></a></li>
-<li><a href="#orgd0322d3">3. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-17 Mon]</span></span></a></li>
-<li><a href="#org0cdfb8c">4. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-14 Fri]</span></span></a></li>
-<li><a href="#org9ba6e28">5. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-13 Thu]</span></span></a></li>
-<li><a href="#orga9a7ecb">6. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-12 Wed]</span></span></a></li>
-<li><a href="#org50c2d6b">7. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-11 Tue]</span></span></a></li>
-<li><a href="#orge12f3d3">8. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-10 Mon]</span></span></a></li>
-<li><a href="#org3d30a97">9. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></a></li>
-<li><a href="#org41741f5">10. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></a></li>
-<li><a href="#org997e7e8">11. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></a></li>
-<li><a href="#org187fc3d">12. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></a></li>
-<li><a href="#org7abf163">13. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></a></li>
-<li><a href="#orgc24a8e3">14. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></a></li>
-<li><a href="#orgfc8155c">15. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></a></li>
-<li><a href="#orgde31f9d">16. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></a></li>
-<li><a href="#org129ccd7">17. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></a></li>
-<li><a href="#orgc6308d5">18. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></a></li>
-<li><a href="#org680c4b8">19. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></a></li>
-<li><a href="#orgc3bebf0">20. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></a></li>
+<li><a href="#active">1. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-26 Wed]</span></span></a></li>
+<li><a href="#org8304f1b">2. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-25 Tue]</span></span></a></li>
+<li><a href="#orgfbbfe55">3. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-19 Wed]</span></span></a></li>
+<li><a href="#orgd0322d3">4. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-17 Mon]</span></span></a></li>
+<li><a href="#org0cdfb8c">5. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-14 Fri]</span></span></a></li>
+<li><a href="#org9ba6e28">6. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-13 Thu]</span></span></a></li>
+<li><a href="#orga9a7ecb">7. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-12 Wed]</span></span></a></li>
+<li><a href="#org50c2d6b">8. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-11 Tue]</span></span></a></li>
+<li><a href="#orge12f3d3">9. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-10 Mon]</span></span></a></li>
+<li><a href="#org3d30a97">10. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></a></li>
+<li><a href="#org41741f5">11. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></a></li>
+<li><a href="#org997e7e8">12. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></a></li>
+<li><a href="#org187fc3d">13. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></a></li>
+<li><a href="#org7abf163">14. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></a></li>
+<li><a href="#orgc24a8e3">15. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></a></li>
+<li><a href="#orgfc8155c">16. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></a></li>
+<li><a href="#orgde31f9d">17. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></a></li>
+<li><a href="#org129ccd7">18. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></a></li>
+<li><a href="#orgc6308d5">19. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></a></li>
+<li><a href="#org680c4b8">20. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></a></li>
+<li><a href="#orgc3bebf0">21. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></a></li>
 </ul>
 </div>
 </nav>
 
 
 <section id="outline-container-active" class="outline-2">
-<h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-25 Tue]</span></span></h2>
+<h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-26 Wed]</span></span></h2>
 <div class="outline-text-2" id="text-active">
+<ul class="org-ul">
+<li>将课本第一二章，看熟、练熟</li>
+<li>能够使用 MVC 独立完成简单的功能</li>
+<li>了解、总结 bootstrap.css 的基本使用</li>
+</ul>
+</div>
+</section>
+
+
+<section id="outline-container-org8304f1b" class="outline-2">
+<h2 id="org8304f1b"><span class="section-number-2">2.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-25 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>整理总结今天所讲内容</li>
 <li>安装 VSCode</li>
@@ -59,8 +72,8 @@
 </section>
 
 <section id="outline-container-orgfbbfe55" class="outline-2">
-<h2 id="orgfbbfe55"><span class="section-number-2">2.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-19 Wed]</span></span></h2>
-<div class="outline-text-2" id="text-2">
+<h2 id="orgfbbfe55"><span class="section-number-2">3.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-19 Wed]</span></span></h2>
+<div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>总结: 栈 vs 堆</li>
 <li>总结: String vs StringBuilder</li>
@@ -151,8 +164,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-orgd0322d3" class="outline-2">
-<h2 id="orgd0322d3"><span class="section-number-2">3.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-17 Mon]</span></span></h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="orgd0322d3"><span class="section-number-2">4.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-17 Mon]</span></span></h2>
+<div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>IEnumerable/foreach 可迭代对象</li>
 <li>请告诉我这两个概念的区别: override/overload, 重写 vs 重载</li>
@@ -167,8 +180,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org0cdfb8c" class="outline-2">
-<h2 id="org0cdfb8c"><span class="section-number-2">4.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-14 Fri]</span></span></h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org0cdfb8c"><span class="section-number-2">5.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-14 Fri]</span></span></h2>
+<div class="outline-text-2" id="text-5">
 <p>
 将【学生管理】的增删改查 (CRUD) 使用 MVC 进行实现并完善:
 </p>
@@ -186,8 +199,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org9ba6e28" class="outline-2">
-<h2 id="org9ba6e28"><span class="section-number-2">5.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-13 Thu]</span></span></h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org9ba6e28"><span class="section-number-2">6.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-13 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li><b>将 <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a> 吃透、敲熟</b></li>
 <li>学会使用 SqlServer Express LocalDB 进行开发</li>
@@ -199,8 +212,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-orga9a7ecb" class="outline-2">
-<h2 id="orga9a7ecb"><span class="section-number-2">6.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-12 Wed]</span></span></h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="orga9a7ecb"><span class="section-number-2">7.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-12 Wed]</span></span></h2>
+<div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li>先模仿后超越:  <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>, <b>认真敲认真练</b>, 记得要整理笔记!</li>
 <li>了解什么是 XSS 攻击，如何防范</li>
@@ -210,8 +223,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org50c2d6b" class="outline-2">
-<h2 id="org50c2d6b"><span class="section-number-2">7.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-11 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="org50c2d6b"><span class="section-number-2">8.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-11 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>概念总结: MVC vs 三层架构</li>
 <li>了解什么是 CSRF 攻击</li>
@@ -222,8 +235,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-orge12f3d3" class="outline-2">
-<h2 id="orge12f3d3"><span class="section-number-2">8.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-10 Mon]</span></span></h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="orge12f3d3"><span class="section-number-2">9.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-10 Mon]</span></span></h2>
+<div class="outline-text-2" id="text-9">
 <p>
 实现博客项目中 “文章管理” 相关的功能:
 </p>
@@ -253,8 +266,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org3d30a97" class="outline-2">
-<h2 id="org3d30a97"><span class="section-number-2">9.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></h2>
-<div class="outline-text-2" id="text-9">
+<h2 id="org3d30a97"><span class="section-number-2">10.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-10">
 <ol class="org-ol">
 <li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
 <li>将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握</li>
@@ -279,8 +292,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org41741f5" class="outline-2">
-<h2 id="org41741f5"><span class="section-number-2">10.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></h2>
-<div class="outline-text-2" id="text-10">
+<h2 id="org41741f5"><span class="section-number-2">11.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></h2>
+<div class="outline-text-2" id="text-11">
 <p>
 关于 HTTP 的无状态性:
 </p>
@@ -295,8 +308,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org997e7e8" class="outline-2">
-<h2 id="org997e7e8"><span class="section-number-2">11.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-11">
+<h2 id="org997e7e8"><span class="section-number-2">12.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-12">
 <ul class="org-ul">
 <li>整理下 HttpRequest 对象的基本 API</li>
 <li>整理下 Asp.Net 的管线事件有哪些? 执行顺序?</li>
@@ -305,8 +318,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org187fc3d" class="outline-2">
-<h2 id="org187fc3d"><span class="section-number-2">12.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></h2>
-<div class="outline-text-2" id="text-12">
+<h2 id="org187fc3d"><span class="section-number-2">13.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></h2>
+<div class="outline-text-2" id="text-13">
 <p>
 周末作业:
 </p>
@@ -328,8 +341,8 @@ ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span
 </section>
 
 <section id="outline-container-org7abf163" class="outline-2">
-<h2 id="org7abf163"><span class="section-number-2">13.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></h2>
-<div class="outline-text-2" id="text-13">
+<h2 id="org7abf163"><span class="section-number-2">14.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></h2>
+<div class="outline-text-2" id="text-14">
 <ul class="org-ul">
 <li>总结一下 SqlAdapter 的用法</li>
 <li>总结一下遍历 DataTable 的方法</li>
@@ -346,8 +359,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgc24a8e3" class="outline-2">
-<h2 id="orgc24a8e3"><span class="section-number-2">14.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-14">
+<h2 id="orgc24a8e3"><span class="section-number-2">15.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-15">
 <p>
 使用 ASP.NET 实现:
 </p>
@@ -375,8 +388,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgfc8155c" class="outline-2">
-<h2 id="orgfc8155c"><span class="section-number-2">15.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></h2>
-<div class="outline-text-2" id="text-15">
+<h2 id="orgfc8155c"><span class="section-number-2">16.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-16">
 <ul class="org-ul">
 <li>什么是 CS 架构，什么是 BS 架构?</li>
 <li>CS 架构跟 BS 架构相比，各有什么优劣?</li>
@@ -387,8 +400,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgde31f9d" class="outline-2">
-<h2 id="orgde31f9d"><span class="section-number-2">16.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></h2>
-<div class="outline-text-2" id="text-16">
+<h2 id="orgde31f9d"><span class="section-number-2">17.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-17">
 <p>
 修复【教学辅助系统】中存在的 BUG:
 </p>
@@ -400,8 +413,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-org129ccd7" class="outline-2">
-<h2 id="org129ccd7"><span class="section-number-2">17.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-17">
+<h2 id="org129ccd7"><span class="section-number-2">18.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-18">
 <p>
 将班级项目展的各个项目，通过QQ邮件的方式发送给我。8/30 日中午放学前务必提交。
 </p>
@@ -420,8 +433,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgc6308d5" class="outline-2">
-<h2 id="orgc6308d5"><span class="section-number-2">18.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></h2>
-<div class="outline-text-2" id="text-18">
+<h2 id="orgc6308d5"><span class="section-number-2">19.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></h2>
+<div class="outline-text-2" id="text-19">
 <p>
 实现一个计算器的程序。可以参考 Windows 自带的计算器。
 </p>
@@ -429,8 +442,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-org680c4b8" class="outline-2">
-<h2 id="org680c4b8"><span class="section-number-2">19.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-19">
+<h2 id="org680c4b8"><span class="section-number-2">20.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-20">
 <ol class="org-ol">
 <li>请做一下自我介绍 (至少 200 字)</li>
 <li>请描述一下你选择我们学习的原因</li>
@@ -445,8 +458,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgc3bebf0" class="outline-2">
-<h2 id="orgc3bebf0"><span class="section-number-2">20.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></h2>
-<div class="outline-text-2" id="text-20">
+<h2 id="orgc3bebf0"><span class="section-number-2">21.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></h2>
+<div class="outline-text-2" id="text-21">
 <p>
 环境:
 </p>
@@ -460,7 +473,7 @@ https://xxx.com/yyy?name=xxx#kkkk
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-25</p>
+<p class="date">Created: 2022-10-26</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
