--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-25 -->
+<!-- 2022-10-26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -42,9 +42,9 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ul class="org-ul">
-<li>整理总结今天所讲内容</li>
-<li>安装 VSCode</li>
-<li>练习 dotnet 命令行工具的使用</li>
+<li>将课本第一二章，看熟、练熟</li>
+<li>能够使用 MVC 独立完成简单的功能</li>
+<li>了解、总结 bootstrap.css 的基本使用</li>
 </ul>
 
 <div><br>
@@ -151,7 +151,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-25</p>
+<p class="date">Created: 2022-10-26</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
