best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -45,6 +45,7 @@
 <li>将课本第一二章，看熟、练熟</li>
 <li>能够使用 MVC 独立完成简单的功能</li>
 <li>了解、总结 bootstrap.css 的基本使用</li>
+<li>了解 emmet 插件和 emmet 语法，善于利用此工具提高开发效率</li>
 </ul>
 
 <div><br>
