best_try_and_best_chance

--- a/html/dotnet/0-csharp.html
+++ b/html/dotnet/0-csharp.html
@@ -172,7 +172,7 @@
 <li><a href="#org96851bb">12.1.4. 模板代码实在不爽，委托类型出现来救场</a></li>
 </ul>
 </li>
-<li><a href="#org37ecbf2">12.2. 基本语法</a></li>
+<li><a href="#orgf652a61">12.2. 基本语法</a></li>
 <li><a href="#org02490b7">12.3. 匿名委托</a></li>
 <li><a href="#org9e08dbb">12.4. 表达式语法</a></li>
 <li><a href="#org8209cba">12.5. 内建的委托类型 Action/Func</a></li>
@@ -317,18 +317,18 @@
 <li><a href="#org9780d66">22.7. FileSystemWatching</a></li>
 </ul>
 </li>
-<li><a href="#orgb5af594">23. Socket</a>
+<li><a href="#orgf5a3c0a">23. Socket</a>
 <ul>
 <li><a href="#orgd2b4814">23.1. OSI 模型</a></li>
 <li><a href="#orgf72c611">23.2. TCP/IP 协议栈</a></li>
 <li><a href="#org36cdc5c">23.3. Uri/UriBuilder</a></li>
 <li><a href="#org2ae0956">23.4. IpAddress/Dns</a></li>
-<li><a href="#orgf785cf4">23.5. Socket</a>
+<li><a href="#orgb5af594">23.5. Socket</a>
 <ul>
 <li><a href="#orgece0856">23.5.1. TCP vs UDP</a></li>
 <li><a href="#org1f9d7d0">23.5.2. Socket/TCP</a>
 <ul>
-<li><a href="#orgf652a61">23.5.2.1. 基本语法</a></li>
+<li><a href="#org7b37df7">23.5.2.1. 基本语法</a></li>
 <li><a href="#orgc646996">23.5.2.2. 简单的 HTTP 服务器</a></li>
 <li><a href="#org5b92fb4">23.5.2.3. 简单的客户端实现</a></li>
 </ul>
@@ -436,13 +436,13 @@ C# 版本演化:
 </ul>
 
 
-<figure id="orgf4f4ffc">
+<figure id="org9d2b4ae">
 <img src="img/types.png" alt="types.png" width="400px">
 
 </figure>
 
 
-<figure id="orgcf4ac1d">
+<figure id="orgf653200">
 <img src="img/types-2.png" alt="types-2.png" width="400px">
 
 </figure>
@@ -687,7 +687,7 @@ System 命名空间:
 </ul>
 
 
-<figure id="org83f5482">
+<figure id="org0623d8a">
 <img src="img/value-type-ref-type.png" alt="value-type-ref-type.png" width="500px">
 
 </figure>
@@ -808,7 +808,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 
 
-<figure id="org9d6a01c">
+<figure id="org52fafdc">
 <img src="img/integers.png" alt="integers.png" width="400px">
 
 </figure>
@@ -836,7 +836,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </ul>
 
 
-<figure id="org91712fe">
+<figure id="org2005f4d">
 <img src="img/float-type.png" alt="float-type.png" width="500px">
 
 </figure>
@@ -895,7 +895,7 @@ Q &amp; A:
 </ul>
 
 
-<figure id="org67a0d27">
+<figure id="org8856e1c">
 <img src="img/unicode.png" alt="unicode.png" width="500px">
 
 </figure>
@@ -1321,7 +1321,7 @@ s += t; <span style="color: #505050;">// </span><span style="color: #505050;">s 
 </div>
 
 
-<figure id="org987c885">
+<figure id="orge513020">
 <img src="img/string-immute.png" alt="string-immute.png" width="400px">
 
 </figure>
@@ -1359,7 +1359,7 @@ s<span style="color: #000000;">[</span>1<span style="color: #000000;">]</span> =
 </p>
 
 
-<figure id="org282f24f">
+<figure id="orgc9fa942">
 <img src="img/string-vs-stringbuilder.png" alt="string-vs-stringbuilder.png" width="500px">
 
 </figure>
@@ -2358,7 +2358,7 @@ out:
 </div>
 
 
-<figure id="org35360f1">
+<figure id="org98f2ec1">
 <img src="img/method-parameter.png" alt="method-parameter.png" width="400px">
 
 </figure>
@@ -3770,7 +3770,7 @@ Gender (男/女/未知)
 <h4 id="orgd3cb155"><span class="section-number-4">12.1.3.</span> 没有中间商赚差价，借助类和接口的方式，传递不同的方法</h4>
 <div class="outline-text-4" id="text-12-1-3">
 
-<figure id="orgd154277">
+<figure id="org052ff36">
 <img src="img/guaziershouche.png" alt="guaziershouche.png">
 
 </figure>
@@ -3965,8 +3965,8 @@ Gender (男/女/未知)
 </div>
 </div>
 
-<div id="outline-container-org37ecbf2" class="outline-3">
-<h3 id="org37ecbf2"><span class="section-number-3">12.2.</span> 基本语法</h3>
+<div id="outline-container-orgf652a61" class="outline-3">
+<h3 id="orgf652a61"><span class="section-number-3">12.2.</span> 基本语法</h3>
 <div class="outline-text-3" id="text-12-2">
 <div class="org-src-container">
 <pre class="src src-cs"><span style="color: #505050;">// </span><span style="color: #505050;">1. &#22768;&#26126; (&#22996;&#25176;&#31867;&#22411;)</span>
@@ -7020,10 +7020,9 @@ C# 5 中，出现了 async/await 关键词:
 <span style="color: #000000;">{</span>
     <span style="color: #005a5f;">var</span> <span style="color: #00538b;">client</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">HttpClient</span><span style="color: #a8007f;">()</span>;
 
-    <span style="color: #005a5f;">Task</span><span style="color: #a8007f;">&lt;</span><span style="color: #005a5f;">string</span><span style="color: #a8007f;">&gt;</span> <span style="color: #00538b;">getStringTask</span> =
-        client.<span style="color: #721045;">GetStringAsync</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"https://docs.microsoft.com/dotnet"</span><span style="color: #a8007f;">)</span>;
+    <span style="color: #005a5f;">Task</span><span style="color: #a8007f;">&lt;</span><span style="color: #005a5f;">string</span><span style="color: #a8007f;">&gt;</span> <span style="color: #00538b;">getStringTask</span> = client.<span style="color: #721045;">GetStringAsync</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"https://docs.microsoft.com/dotnet"</span><span style="color: #a8007f;">)</span>;
 
-    <span style="color: #721045;">DoIndependentWork</span><span style="color: #a8007f;">()</span>;
+    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"&#35831;&#27714;&#21457;&#36865;&#20013;&#65292;&#35831;&#31561;&#20505;.."</span><span style="color: #a8007f;">)</span>;
 
     <span style="color: #005a5f;">string</span> <span style="color: #00538b;">contents</span> = <span style="color: #5317ac;">await</span> getStringTask; <span style="color: #505050;">// </span><span style="color: #505050;">&#39764;&#27861;&#20043;&#28304;&#12290;&#22914;&#26524;&#20219;&#21153;&#27809;&#32467;&#26463;&#65292;&#25226;&#26041;&#27861;&#25346;&#36215;&#26469;</span>
 
@@ -7073,23 +7072,23 @@ C# 5 中，出现了 async/await 关键词:
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">//</span><span style="color: #505050;">for (int i = 0; i &lt; 1000; i++)</span>
 <span style="color: #505050;">//</span><span style="color: #505050;">{</span>
-<span style="color: #505050;">//    </span><span style="color: #505050;">Console.WriteLine(i);</span>
+<span style="color: #505050;">//    </span><span style="color: #505050;">Console.WriteLine($"job: {i}");</span>
 <span style="color: #505050;">//</span><span style="color: #505050;">}</span>
 
 <span style="color: #505050;">//</span><span style="color: #505050;">Task.WaitAll(</span>
 <span style="color: #505050;">//    </span><span style="color: #505050;">Enumerable.Range(0, 1000)</span>
-<span style="color: #505050;">//        </span><span style="color: #505050;">.Select(n =&gt; Task.Run(() =&gt; Console.WriteLine(n)))</span>
+<span style="color: #505050;">//        </span><span style="color: #505050;">.Select(n =&gt; Task.Run(() =&gt; Console.WriteLine($"job: {n}")))</span>
 <span style="color: #505050;">//        </span><span style="color: #505050;">.ToArray()</span>
 <span style="color: #505050;">//        </span><span style="color: #505050;">);</span>
 
 <span style="color: #505050;">//</span><span style="color: #505050;">Parallel.For(0, 1000, (n) =&gt;</span>
 <span style="color: #505050;">//</span><span style="color: #505050;">{</span>
-<span style="color: #505050;">//    </span><span style="color: #505050;">Console.WriteLine(n);</span>
+<span style="color: #505050;">//    </span><span style="color: #505050;">Console.WriteLine($"job: {i}");</span>
 <span style="color: #505050;">//</span><span style="color: #505050;">});</span>
 
 <span style="color: #005a5f;">List</span><span style="color: #000000;">&lt;</span><span style="color: #005a5f;">int</span><span style="color: #000000;">&gt;</span> <span style="color: #00538b;">numbers</span> = Enumerable.<span style="color: #721045;">Range</span><span style="color: #000000;">(</span>0, 1000<span style="color: #000000;">)</span>.<span style="color: #721045;">ToList</span><span style="color: #000000;">()</span>;
-<span style="color: #505050;">//</span><span style="color: #505050;">foreach (var n in numbers) Console.WriteLine(n);</span>
-<span style="color: #505050;">//</span><span style="color: #505050;">Parallel.ForEach(numbers, (n) =&gt; Console.WriteLine(n));</span>
+<span style="color: #505050;">//</span><span style="color: #505050;">foreach (var n in numbers) Console.WriteLine($"job: {n}");</span>
+<span style="color: #505050;">//</span><span style="color: #505050;">Parallel.ForEach(numbers, (n) =&gt; Console.WriteLine($"job: {n}"));</span>
 
 Parallel.<span style="color: #721045;">Invoke</span><span style="color: #000000;">(</span>
     <span style="color: #a8007f;">()</span> =&gt;
@@ -8069,8 +8068,8 @@ Console.<span style="color: #721045;">ReadKey</span><span style="color: #000000;
 </div>
 </section>
 
-<section id="outline-container-orgb5af594" class="outline-2">
-<h2 id="orgb5af594"><span class="section-number-2">23.</span> Socket</h2>
+<section id="outline-container-orgf5a3c0a" class="outline-2">
+<h2 id="orgf5a3c0a"><span class="section-number-2">23.</span> Socket</h2>
 <div class="outline-text-2" id="text-23">
 </div>
 <div id="outline-container-orgd2b4814" class="outline-3">
@@ -8087,7 +8086,7 @@ Console.<span style="color: #721045;">ReadKey</span><span style="color: #000000;
 </ul>
 
 
-<figure id="org8b09369">
+<figure id="orgcc0a554">
 <img src="img/osi-1.png" alt="osi-1.png">
 
 </figure>
@@ -8110,21 +8109,21 @@ Console.<span style="color: #721045;">ReadKey</span><span style="color: #000000;
 <h3 id="orgf72c611"><span class="section-number-3">23.2.</span> TCP/IP 协议栈</h3>
 <div class="outline-text-3" id="text-23-2">
 
-<figure id="org85fc6f0">
+<figure id="orgcb942b1">
 <img src="img/tcpipstack.png" alt="tcpipstack.png">
 
 </figure>
 
 
 
-<figure id="orge4c5281">
+<figure id="orgb455526">
 <img src="img/tcpip-2222.png" alt="tcpip-2222.png">
 
 </figure>
 
 
 
-<figure id="orgb7b84f6">
+<figure id="org7cb2c6b">
 <img src="img/tcpip-3332.png" alt="tcpip-3332.png">
 
 </figure>
@@ -8145,7 +8144,7 @@ URI (Uniform Resource Identifier), 统一资源标识符:
 <p>
 示例:
 </p>
-<pre class="example" id="org2583b82">
+<pre class="example" id="orga36fcb1">
 ftp://ftp.is.co.za/rfc/rfc1808.txt (also a URL because of the protocol)
 http://www.ietf.org/rfc/rfc2396.txt (also a URL because of the protocol)
 ldap://[2001:db8::7]/c=GB?objectClass?one (also a URL because of the protocol)
@@ -8230,8 +8229,8 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </div>
 
-<div id="outline-container-orgf785cf4" class="outline-3">
-<h3 id="orgf785cf4"><span class="section-number-3">23.5.</span> Socket</h3>
+<div id="outline-container-orgb5af594" class="outline-3">
+<h3 id="orgb5af594"><span class="section-number-3">23.5.</span> Socket</h3>
 <div class="outline-text-3" id="text-23-5">
 <p>
 插座来了。
@@ -8257,7 +8256,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </ul>
 
 
-<figure id="orgfa742c4">
+<figure id="orgabfb33d">
 <img src="img/tcp3333.png" alt="tcp3333.png">
 
 </figure>
@@ -8274,8 +8273,8 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </ul>
 </div>
 
-<div id="outline-container-orgf652a61" class="outline-5">
-<h5 id="orgf652a61"><span class="section-number-5">23.5.2.1.</span> 基本语法</h5>
+<div id="outline-container-org7b37df7" class="outline-5">
+<h5 id="org7b37df7"><span class="section-number-5">23.5.2.1.</span> 基本语法</h5>
 <div class="outline-text-5" id="text-23-5-2-1">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">TCP &#32534;&#31243;&#19977;&#26495;&#26023;:</span>
