--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-31 -->
+<!-- 2022-11-01 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -26,6 +26,11 @@
 <ul>
 <li><a href="#org4d2e173">1.1. 历史</a></li>
 <li><a href="#org706c080">1.2. 规范</a></li>
+<li><a href="#orgf16bd8d">1.3. 其他</a>
+<ul>
+<li><a href="#org13f3194">1.3.1. JIT vs AOT</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#org2e46c72">2. 单机 到 CS 到 BS</a></li>
@@ -44,7 +49,7 @@
 </ul>
 </li>
 <li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
-<li><a href="#orgf16bd8d">5.7. 其他</a>
+<li><a href="#org10ddb67">5.7. 其他</a>
 <ul>
 <li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
 <li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
@@ -58,7 +63,7 @@
 <ul>
 <li><a href="#orgf24ab64">6.1. MVC</a></li>
 <li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
-<li><a href="#org7698a57">6.3. Action</a></li>
+<li><a href="#orgf058782">6.3. Action</a></li>
 <li><a href="#org592c73d">6.4. Razor</a></li>
 <li><a href="#org946e302">6.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">6.6. Filter</a></li>
@@ -69,7 +74,7 @@
 <li><a href="#orge8f9cc3">7.1. JSON</a></li>
 <li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">7.3. Router</a></li>
-<li><a href="#orgf058782">7.4. Action</a></li>
+<li><a href="#orge3078c1">7.4. Action</a></li>
 <li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
@@ -85,8 +90,11 @@
 <li><a href="#orgef21bee">8.3.4. 初始化器</a></li>
 <li><a href="#org6dff4ee">8.3.5. 模式匹配 (Patter-Match)</a></li>
 <li><a href="#org853755d">8.3.6. 扩展方法</a></li>
+<li><a href="#org66ef195">8.3.7. 异步编程</a></li>
+<li><a href="#orgcc32f0e">8.3.8. nameof</a></li>
 </ul>
 </li>
+<li><a href="#orgf8529c6">8.4. 软件工程</a></li>
 </ul>
 </li>
 <li><a href="#orgfe4d7fe">9. ASP.NET Core MVC</a>
@@ -181,6 +189,26 @@
 <li>注: .NET = <b>SDK</b> (Software Development Kit, 开发工具包) + <b>CLR</b> (Common Language Runtime，通用运行时)</li>
 <li>后来 CLI 被提交到了国际化标准组织，成为了一个通用的国际标准</li>
 </ul>
+</div>
+</div>
+
+<div id="outline-container-orgf16bd8d" class="outline-3">
+<h3 id="orgf16bd8d"><span class="section-number-3">1.3.</span> 其他</h3>
+<div class="outline-text-3" id="text-1-3">
+</div>
+<div id="outline-container-org13f3194" class="outline-4">
+<h4 id="org13f3194"><span class="section-number-4">1.3.1.</span> JIT vs AOT</h4>
+<div class="outline-text-4" id="text-1-3-1">
+<ul class="org-ul">
+<li>JIT (Just In Time)</li>
+<li>AOT (Ahead Of Time)</li>
+</ul>
+
+<pre class="example">
+.cs -&gt; .dll (IL) -&gt; 机器码
+.cs   -----------&gt; 机器码
+</pre>
+</div>
 </div>
 </div>
 </section>
@@ -533,7 +561,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-5-3">
 
-<figure id="org50e37df">
+<figure id="org48c8387">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -723,7 +751,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgd794fed">
+<pre class="example" id="orga272f21">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -780,7 +808,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgb939191">
+<pre class="example" id="org596dbf5">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -999,8 +1027,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 
-<div id="outline-container-orgf16bd8d" class="outline-3">
-<h3 id="orgf16bd8d"><span class="section-number-3">5.7.</span> 其他</h3>
+<div id="outline-container-org10ddb67" class="outline-3">
+<h3 id="org10ddb67"><span class="section-number-3">5.7.</span> 其他</h3>
 <div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
@@ -1107,7 +1135,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-6-2">
 
-<figure id="orgbd93912">
+<figure id="org8124104">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1186,8 +1214,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org7698a57" class="outline-3">
-<h3 id="org7698a57"><span class="section-number-3">6.3.</span> Action</h3>
+<div id="outline-container-orgf058782" class="outline-3">
+<h3 id="orgf058782"><span class="section-number-3">6.3.</span> Action</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1425,8 +1453,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-orgf058782" class="outline-3">
-<h3 id="orgf058782"><span class="section-number-3">7.4.</span> Action</h3>
+<div id="outline-container-orge3078c1" class="outline-3">
+<h3 id="orge3078c1"><span class="section-number-3">7.4.</span> Action</h3>
 <div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
@@ -1898,6 +1926,39 @@ switch -&gt; case when:
 </div>
 </div>
 </div>
+
+<div id="outline-container-org66ef195" class="outline-4">
+<h4 id="org66ef195"><span class="section-number-4">8.3.7.</span> 异步编程</h4>
+<div class="outline-text-4" id="text-8-3-7">
+<p>
+async/await
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgcc32f0e" class="outline-4">
+<h4 id="orgcc32f0e"><span class="section-number-4">8.3.8.</span> nameof</h4>
+<div class="outline-text-4" id="text-8-3-8">
+<div class="org-src-container">
+<pre class="src src-csharp"><span style="color: #5317ac;">class</span> <span style="color: #005a5f;">Program</span> <span style="color: #000000;">{}</span>
+
+Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span><span style="color: #2544bb;">"Program"</span><span style="color: #000000;">)</span>;
+Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span><span style="color: #721045;">nameof</span><span style="color: #a8007f;">(</span><span style="color: #00538b;">Program</span><span style="color: #a8007f;">)</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orgf8529c6" class="outline-3">
+<h3 id="orgf8529c6"><span class="section-number-3">8.4.</span> 软件工程</h3>
+<div class="outline-text-3" id="text-8-4">
+
+<figure id="org141db54">
+<img src="img/software-flow.svg" alt="software-flow.svg" class="org-svg">
+
+</figure>
+</div>
 </div>
 </section>
 
@@ -1918,7 +1979,7 @@ switch -&gt; case when:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-31</p>
+<p class="date">Created: 2022-11-01</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
