best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -26,7 +26,7 @@
 <ul>
 <li><a href="#org4d2e173">1.1. 历史</a></li>
 <li><a href="#org706c080">1.2. 规范</a></li>
-<li><a href="#orgf16bd8d">1.3. 其他</a>
+<li><a href="#org10ddb67">1.3. 其他</a>
 <ul>
 <li><a href="#org13f3194">1.3.1. JIT vs AOT</a></li>
 </ul>
@@ -49,7 +49,7 @@
 </ul>
 </li>
 <li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
-<li><a href="#org10ddb67">5.7. 其他</a>
+<li><a href="#org838e187">5.7. 其他</a>
 <ul>
 <li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
 <li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
@@ -63,7 +63,7 @@
 <ul>
 <li><a href="#orgf24ab64">6.1. MVC</a></li>
 <li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
-<li><a href="#orgf058782">6.3. Action</a></li>
+<li><a href="#orge3078c1">6.3. Action</a></li>
 <li><a href="#org592c73d">6.4. Razor</a></li>
 <li><a href="#org946e302">6.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">6.6. Filter</a></li>
@@ -74,7 +74,7 @@
 <li><a href="#orge8f9cc3">7.1. JSON</a></li>
 <li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">7.3. Router</a></li>
-<li><a href="#orge3078c1">7.4. Action</a></li>
+<li><a href="#org792aec9">7.4. Action</a></li>
 <li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
@@ -192,8 +192,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf16bd8d" class="outline-3">
-<h3 id="orgf16bd8d"><span class="section-number-3">1.3.</span> 其他</h3>
+<div id="outline-container-org10ddb67" class="outline-3">
+<h3 id="org10ddb67"><span class="section-number-3">1.3.</span> 其他</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
 <div id="outline-container-org13f3194" class="outline-4">
@@ -561,7 +561,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-5-3">
 
-<figure id="org48c8387">
+<figure id="org0fc41e7">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -751,7 +751,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orga272f21">
+<pre class="example" id="org6f78c5d">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -808,7 +808,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org596dbf5">
+<pre class="example" id="orgc58eef1">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -1027,8 +1027,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 
-<div id="outline-container-org10ddb67" class="outline-3">
-<h3 id="org10ddb67"><span class="section-number-3">5.7.</span> 其他</h3>
+<div id="outline-container-org838e187" class="outline-3">
+<h3 id="org838e187"><span class="section-number-3">5.7.</span> 其他</h3>
 <div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
@@ -1135,7 +1135,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-6-2">
 
-<figure id="org8124104">
+<figure id="orga605f0c">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1214,8 +1214,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-orgf058782" class="outline-3">
-<h3 id="orgf058782"><span class="section-number-3">6.3.</span> Action</h3>
+<div id="outline-container-orge3078c1" class="outline-3">
+<h3 id="orge3078c1"><span class="section-number-3">6.3.</span> Action</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1453,8 +1453,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-orge3078c1" class="outline-3">
-<h3 id="orge3078c1"><span class="section-number-3">7.4.</span> Action</h3>
+<div id="outline-container-org792aec9" class="outline-3">
+<h3 id="org792aec9"><span class="section-number-3">7.4.</span> Action</h3>
 <div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
@@ -1953,11 +1953,9 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 <div id="outline-container-orgf8529c6" class="outline-3">
 <h3 id="orgf8529c6"><span class="section-number-3">8.4.</span> 软件工程</h3>
 <div class="outline-text-3" id="text-8-4">
-
-<figure id="org141db54">
-<img src="img/software-flow.svg" alt="software-flow.svg" class="org-svg">
-
-</figure>
+<p>
+<a href="img/software-flow.svg">软件开发流程</a>
+</p>
 </div>
 </div>
 </section>
